--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "bcrypt": "^5.0.1",
     "express": "^4.18.1",
+    "fcm-node": "^1.6.1",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
